--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
+	<script src="./assets/script.js" defer></script> <!--Import JavaScript file -->
 </head>
 <body>
 <header class="container">
@@ -19,6 +20,14 @@
 <main>
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<div class="arrow">
+			<a>
+			  <img src="./assets/images/arrow_left.png" alt="arrow left" class="arrow_left">
+			</a>
+			<a>
+			  <img src="./assets/images/arrow_right.png" alt="arrow right" class="arrow_right">
+			</a>
+		</div>
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
 		</div>
