--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
 </header>
 <main>
 	<div id="banner">
+		<img src="./assets/images/arrow_left.png" alt="arrow left" class="arrow_left arrow">
+		<img src="./assets/images/arrow_right.png" alt="arrow right" class="arrow_right arrow">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<div class="arrow">
-			<a>
-			  <img src="./assets/images/arrow_left.png" alt="arrow left" class="arrow_left">
-			</a>
-			<a>
-			  <img src="./assets/images/arrow_right.png" alt="arrow right" class="arrow_right">
-			</a>
-		</div>
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots"></div>
 	</div>
