--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </header>
 <main>
 	<div id="banner">
-		<img src="./assets/images/arrow_left.png" alt="arrow left" class="arrow_left arrow">
-		<img src="./assets/images/arrow_right.png" alt="arrow right" class="arrow_right arrow">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img src="./assets/images/arrow_left.png" alt="arrow left" class="arrow arrow_left">
+		<img src="./assets/images/arrow_right.png" alt="arrow right" class="arrow arrow_right">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots"></div>
 	</div>
